# brush

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  METRICS_LOG_NOTE.md  README.md  THIRD_PARTY_NOTICES.md  _typos.toml  deny.toml
.github/workflows/: ci.yml
apps/brush-app/: Cargo.toml
apps/brush-app/app/src/main/java/com/splats/app/: FilePicker.java  MainActivity.java
apps/brush-app/src/: android.rs  bin.rs  wasm.rs
apps/brush-app/src/ui/: app.rs  datasets.rs  log_panel.rs  scene.rs  settings_panel.rs  settings_popup.rs  splat_backbuffer.rs  stats.rs  training_panel.rs
apps/brush-app/src/ui/shaders/: splat_backbuffer.wgsl
apps/brush-app/web/src/: BrushViewer.tsx
apps/brush-c/: Cargo.toml
apps/brush-c/src/: lib.rs
apps/brush-c/tests/: integration.rs
apps/brush-cli/: Cargo.toml
apps/brush-cli/src/: lib.rs  main.rs
apps/brush-js/src/: lib.rs
apps/brush-js/web/src/: main.ts
crates/brush-appearance/: Cargo.toml
crates/brush-appearance/src/: bilagrid.rs  bilagrid_kernels.rs  lib.rs  ppisp.rs  ppisp_kernels.rs  ppisp_math.rs  train_state.rs
crates/brush-appearance/tests/: reference.rs
crates/brush-bench-test/: Cargo.toml
crates/brush-bench-test/src/: benches.rs  checkpoint_replay.rs  eval_checkpoint.rs
crates/brush-bench-test/tests/: dig_features.rs  finite_diff.rs  fuzz.rs  integration.rs
crates/brush-cube/: Cargo.toml
crates/brush-cube/src/: lib.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: config.rs  lib.rs  load_depth.rs  load_features.rs  scene.rs  scene_loader.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs  realitycapture.rs
crates/brush-loss/: Cargo.toml
crates/brush-loss/src/: lib.rs
crates/brush-loss/tests/: reference.rs
crates/brush-prefix-sum/src/: kernels.rs  lib.rs
crates/brush-process/: Cargo.toml
crates/brush-process/src/: args_file.rs  config.rs  lib.rs  train_stream.rs
crates/brush-render/: Cargo.toml
crates/brush-render-bwd/: Cargo.toml
crates/brush-render-bwd/src/: burn_glue.rs  features_bwd.rs  lib.rs  render_bwd.rs
crates/brush-render-bwd/src/kernels/: mod.rs  project_backwards.rs  rasterize_backwards.rs  rasterize_features_backwards.rs  sh_grad_materialize.rs
crates/brush-render/src/: burn_glue.rs  gaussian_splats.rs  get_tile_offset.rs  lib.rs  native_msl.rs  raster_census.rs  render.rs  render_aux.rs  render_features.rs  shaders.rs
crates/brush-render/src/kernels/: helpers.rs  map_gaussians.rs  mod.rs  project_forward.rs  project_visible.rs  rasterize.rs  rasterize_features.rs  sh.rs  types.rs
crates/brush-render/src/tests/: mod.rs  raster_oracle.rs
crates/brush-rerun/src/: lib.rs
crates/brush-serde/: Cargo.toml
crates/brush-serde/src/: import.rs  ply_gaussian.rs
crates/brush-sort/benches/: sort_bench.rs
crates/brush-sort/src/: lib.rs
crates/brush-train/: Cargo.toml
crates/brush-train/src/: adam_scaled.rs  config.rs  dig.rs  edge.rs  error_map.rs  eval.rs  lib.rs  lod.rs  min_scale.rs  multinomial.rs  sh_adam.rs  splat_init.rs  stats.rs  train.rs
crates/brush-vfs/src/: lib.rs
crates/lpips/src/: lib.rs
crates/rrfd/: Cargo.toml
crates/rrfd/src/: android.rs  wasm.rs
docs/dig-port/: dig-port-usage.md
docs/performance/: egg-15k-upstream-vs-macos-preset.md  egg-raster-fine-tile-results.md  egg-raster-workload-census.md  wd-r-macos-replay-pilot.md  wd-r-tandt-400-quality-pilot.md
scripts/: extract_dino_features.py
