[package]
name = "brush-cube"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true, features = ["wgpu"] }
burn-cubecl.workspace = true
burn-wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
log.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[lints]
workspace = true
