[package]
name = "brush-loss"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
native-msl = ["brush-render/native-msl"]

[dependencies]
brush-render.path = "../brush-render"
brush-cube.path = "../brush-cube"

burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true
glam.workspace = true
tracing.workspace = true

[dev-dependencies]
brush-cube = { path = "../brush-cube" }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
