
[package]
name = "brush-process"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
debug-validation = ["brush-train/debug-validation"]
native-msl = [
    "brush-render/native-msl",
    "brush-render-bwd/native-msl",
    "brush-train/native-msl",
]

[dependencies]
brush-render.path = "../brush-render"
brush-render-bwd.path = "../brush-render-bwd"
brush-vfs.path = "../brush-vfs"
brush-serde.path = "../brush-serde"

burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true

alphanumeric-sort.workspace = true
anyhow.workspace = true
async-fn-stream.workspace = true

clap.workspace = true
rand.workspace = true
log.workspace = true
glam.workspace = true
web-time.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

wgpu.workspace = true

tokio = { workspace = true, features = ["io-util", "rt", "sync"] }
tokio-stream.workspace = true
brush-async.path = "../brush-async"

brush-train = { path = "../brush-train" }
brush-dataset = { path = "../brush-dataset"}
brush-rerun = { path = "../brush-rerun" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
