[package]
name = "brush-render-bwd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
debug-validation = ["brush-render/debug-validation"]
native-msl = ["brush-render/native-msl"]

[dependencies]
brush-cube.path = "../brush-cube"
brush-render = { path = "../brush-render" }

burn = { workspace = true, features = [
    'wgpu',
    'autodiff',
] }
burn-cubecl.workspace = true
burn-wgpu.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

glam.workspace = true
tracing.workspace = true

[dev-dependencies]
# Enable debug-validation feature when running tests
brush-render = { path = "../brush-render", features = ["debug-validation"] }

[lints]
workspace = true
