[package]
name = "brush-render"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brush-cube.path = "../brush-cube"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-sort.path = "../brush-sort"

burn = { workspace = true, features = ["wgpu"] }
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

assert_approx_eq.workspace = true
glam.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
log.workspace = true
bytemuck.workspace = true

tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[features]
debug-validation = []
native-msl = ["burn-wgpu/metal"]

# CubeCL emits WGSL by default on every platform. The native-msl feature opts
# the macOS Metal backend into CubeCL's MSL compiler; other backends still use
# WGSL.
[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
