[package]
name = "brush-serde"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-serde-macros.path = "../brush-serde-macros"

burn.workspace = true
glam.workspace = true
serde.workspace = true
serde-ply.workspace = true
tokio-stream.workspace = true
async-fn-stream.workspace = true
web-time.workspace = true
brush-async.path = "../brush-async"
thiserror.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "fs", "macros", "time"] }

[dev-dependencies]
brush-cube = { path = "../brush-cube" }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
