[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
debug-validation = ["brush-render-bwd/debug-validation"]
native-msl = [
    "brush-loss/native-msl",
    "brush-render/native-msl",
    "brush-render-bwd/native-msl",
    "burn-wgpu/metal",
]

[dependencies]
brush-render.path = "../brush-render"
brush-appearance.path = "../brush-appearance"
brush-cube.path = "../brush-cube"
brush-dataset.path = "../brush-dataset"
brush-render-bwd.path = "../brush-render-bwd"
brush-loss.path = "../brush-loss"
brush-serde.path = "../brush-serde"
lpips.path = "../lpips"

anyhow.workspace = true
image.workspace = true
clap.workspace = true
serde.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
log.workspace = true
hashbrown.workspace = true
ball-tree.workspace = true
rayon.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true
burn-wgpu.workspace = true

[dev-dependencies]
brush-cube = { path = "../brush-cube" }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear] # or [workspace.metadata.cargo-shear]
ignored = ["getrandom"]
